[gd_scene load_steps=24 format=4 uid="uid://bs551bfydu7dm"]

[ext_resource type="Script" path="res://Levels/level_script.gd" id="1_k46hb"]
[ext_resource type="Texture2D" uid="uid://cp655okg8oo7o" path="res://Assets/BackgroundCity.png" id="1_ltwyt"]
[ext_resource type="PackedScene" uid="uid://cs7fisp5q02se" path="res://Entities/Player.tscn" id="2_qfk5n"]
[ext_resource type="PackedScene" uid="uid://b6cdv6i47lhic" path="res://Entities/bakery.tscn" id="3_qnk7p"]
[ext_resource type="PackedScene" uid="uid://btqibvp8fpebx" path="res://Assets/FloorTiles/Spike.tscn" id="4_dicve"]
[ext_resource type="PackedScene" uid="uid://crxblb6pnqjok" path="res://Assets/FloorTiles/brick_tiles.tscn" id="4_nom37"]
[ext_resource type="Texture2D" uid="uid://7ci5fwr3rtfl" path="res://Assets/spritesheet.png" id="5_rcjlr"]
[ext_resource type="PackedScene" uid="uid://blcmksmvuq4nr" path="res://Entities/cupcakeOrange.tscn" id="7_vn7hh"]
[ext_resource type="Texture2D" uid="uid://du1x53ie13rrg" path="res://Assets/PitfallRealTop.png" id="9_ngvvr"]
[ext_resource type="AudioStream" uid="uid://tpx6qxruu4pu" path="res://Assets/Audio/Level-song.mp3" id="10_yxevj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bskgf"]
size = Vector2(9424, 109)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3m1e7"]
size = Vector2(16, 24.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_72lba"]
atlas = ExtResource("5_rcjlr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoa3o"]
atlas = ExtResource("5_rcjlr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mfn6"]
atlas = ExtResource("5_rcjlr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05heh"]
atlas = ExtResource("5_rcjlr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aalwc"]
atlas = ExtResource("5_rcjlr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6qds"]
atlas = ExtResource("5_rcjlr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_td44y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72lba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoa3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mfn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05heh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aalwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6qds")
}],
"loop": true,
"name": &"BOOST",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_w7453"]
resource_name = "BOOST"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"BOOST"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_8ijca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"BOOST"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_67muo"]
_data = {
"BOOST": SubResource("Animation_w7453"),
"RESET": SubResource("Animation_8ijca")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0dxs"]
size = Vector2(32, 14)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_k46hb")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_begin = Vector2(480, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(80, 88)
scale = Vector2(3.5, 3.5)
texture = ExtResource("1_ltwyt")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(3.85, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(524, 88)
scale = Vector2(3.5, 3.5)
texture = ExtResource("1_ltwyt")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(3.85, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(968, 88)
scale = Vector2(3.5, 3.5)
texture = ExtResource("1_ltwyt")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(3.85, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(1412, 88)
scale = Vector2(3.5, 3.5)
texture = ExtResource("1_ltwyt")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(3.85, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2(1856, 88)
scale = Vector2(3.5, 3.5)
texture = ExtResource("1_ltwyt")

[node name="LowerBG" type="ColorRect" parent="."]
offset_left = -144.0
offset_top = 312.0
offset_right = 7965.0
offset_bottom = 416.0
color = Color(0, 0.27451, 0.054902, 1)

[node name="UpperBG" type="ColorRect" parent="."]
offset_left = -136.0
offset_top = -2168.0
offset_right = 7983.0
offset_bottom = -144.0
color = Color(0, 0, 0, 1)

[node name="Pitfall1" type="Sprite2D" parent="."]
position = Vector2(5712, 288)
scale = Vector2(6.5, 5.25)
texture = ExtResource("9_ngvvr")

[node name="Pitfall3" type="Sprite2D" parent="."]
position = Vector2(1976, 288)
scale = Vector2(93.75, 5.25)
texture = ExtResource("9_ngvvr")

[node name="Pitfall2" type="Sprite2D" parent="."]
position = Vector2(6328, 288)
scale = Vector2(22, 5.25)
texture = ExtResource("9_ngvvr")

[node name="BrickTiles" parent="." instance=ExtResource("4_nom37")]

[node name="Spike" parent="." instance=ExtResource("4_dicve")]
position = Vector2(3394, 304)
tile_map_data = PackedByteArray("AADR//z/AAAAAAAAAADX//z/AAAAAAAAAADU//z/AAAAAAAAAADa//z/AAAAAAAAAAC4//z/AAAAAAAAAAC1//z/AAAAAAAAAAA=")

[node name="KillZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(3256, 424)
shape = SubResource("RectangleShape2D_bskgf")
debug_color = Color(0.813007, 0.0605259, 0.251844, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillZone"]
position = Vector2(1906, 196.25)
shape = SubResource("RectangleShape2D_3m1e7")
debug_color = Color(0.765069, 0, 0.160962, 0.42)

[node name="CollisionShape2D6" type="CollisionShape2D" parent="KillZone"]
position = Vector2(1106, 192.25)
shape = SubResource("RectangleShape2D_3m1e7")
debug_color = Color(0.765069, 0, 0.160962, 0.42)

[node name="CollisionShape2D7" type="CollisionShape2D" parent="KillZone"]
position = Vector2(1010, 192.25)
shape = SubResource("RectangleShape2D_3m1e7")
debug_color = Color(0.765069, 0, 0.160962, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KillZone"]
position = Vector2(2001, 196)
shape = SubResource("RectangleShape2D_3m1e7")
debug_color = Color(0.765069, 0, 0.160962, 0.42)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="KillZone"]
position = Vector2(2098, 196)
shape = SubResource("RectangleShape2D_3m1e7")
debug_color = Color(0.765069, 0, 0.160962, 0.42)

[node name="CollisionShape2D5" type="CollisionShape2D" parent="KillZone"]
position = Vector2(2194, 196)
shape = SubResource("RectangleShape2D_3m1e7")
debug_color = Color(0.765069, 0, 0.160962, 0.42)

[node name="Boost" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(2580, 192)
scale = Vector2(1, 0.875)
sprite_frames = SubResource("SpriteFrames_td44y")
animation = &"BOOST"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boost"]
libraries = {
"": SubResource("AnimationLibrary_67muo")
}
autoplay = "BOOST"

[node name="Boost2" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(2612, 192)
scale = Vector2(1, 0.875)
sprite_frames = SubResource("SpriteFrames_td44y")
animation = &"BOOST"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boost2"]
libraries = {
"": SubResource("AnimationLibrary_67muo")
}
autoplay = "BOOST"

[node name="Boost3" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(2644, 192)
scale = Vector2(1, 0.875)
sprite_frames = SubResource("SpriteFrames_td44y")
animation = &"BOOST"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boost3"]
libraries = {
"": SubResource("AnimationLibrary_67muo")
}
autoplay = "BOOST"

[node name="Boost4" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(2676, 192)
scale = Vector2(1, 0.875)
sprite_frames = SubResource("SpriteFrames_td44y")
animation = &"BOOST"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boost4"]
libraries = {
"": SubResource("AnimationLibrary_67muo")
}
autoplay = "BOOST"

[node name="Boost5" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(2548, 192)
scale = Vector2(1, 0.875)
sprite_frames = SubResource("SpriteFrames_td44y")
animation = &"BOOST"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boost5"]
libraries = {
"": SubResource("AnimationLibrary_67muo")
}
autoplay = "BOOST"

[node name="BoostPanel" type="Area2D" parent="."]
z_index = 1
position = Vector2(2612, 202)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoostPanel"]
position = Vector2(-64, -1)
shape = SubResource("RectangleShape2D_a0dxs")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BoostPanel"]
position = Vector2(-32, -1)
shape = SubResource("RectangleShape2D_a0dxs")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BoostPanel"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_a0dxs")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BoostPanel"]
position = Vector2(32, -1)
shape = SubResource("RectangleShape2D_a0dxs")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="BoostPanel"]
position = Vector2(64, -1)
shape = SubResource("RectangleShape2D_a0dxs")

[node name="Timer" type="Timer" parent="."]
wait_time = 70.0

[node name="Cupcake1" parent="." instance=ExtResource("7_vn7hh")]
position = Vector2(1056, 184)
ID = 1

[node name="Cupcake2" parent="." instance=ExtResource("7_vn7hh")]
position = Vector2(2048, 184)
ID = 2

[node name="Cupcake3" parent="." instance=ExtResource("7_vn7hh")]
position = Vector2(2368, 256)
ID = 3

[node name="Cupcake4" parent="." instance=ExtResource("7_vn7hh")]
position = Vector2(5056, -240)
ID = 4

[node name="Cupcake5" parent="." instance=ExtResource("7_vn7hh")]
position = Vector2(5896, 96)
ID = 5

[node name="Bakery" parent="." instance=ExtResource("3_qnk7p")]
position = Vector2(5904, 168)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_yxevj")
autoplay = true

[node name="Player" parent="." instance=ExtResource("2_qfk5n")]
position = Vector2(88, 240)

[connection signal="boosted" from="." to="Player" method="_on_node_2d_boosted"]
[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="body_entered" from="BoostPanel" to="." method="_on_boost_panel_body_entered"]
[connection signal="body_exited" from="BoostPanel" to="." method="_on_boost_panel_body_exited"]
